Some end game fixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 snakemake
 ipython
 jedi==0.17.2
--e git+git@github.com:wirecell/wire-cell-python.git@master#egg=wire-cell-python
+-e git+git@github.com:wirecell/wire-cell-python.git@master#egg=wirecell
+
